--- a/views/ideas.ejs
+++ b/views/ideas.ejs
@@ -1,157 +1,50 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<% include partials/template/header.ejs %>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  
-<style>
-
-
-
-.card-body {
-    background-color: gray;
-}
-
-
-</style>
-</head>
-  <body style="background-color: rgb(73, 72, 72)">
-
-        <% include partials/template/header.ejs %>
-
-        <nav class="navbar navbar-expand navbar-dark bg-dark" style="border-top: 5px solid black;">
+<nav class="navbar navbar-expand navbar-dark bg-dark" style="border-top: 5px solid black;">
                 
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                  <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Filter</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Sort By
-                      </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <% industry.forEach(record => { %>
-                            <a class="dropdown-item" id="industry<%=record.id%>"><%=record.industryName%></a>
-                            <% }) %> 
-                      </div>
-                    </li>
-                    <li class="nav-item" style="margin: 0vw 5vw 0vw 60vw">
-                            <button id="createProjectButton"><a href="/newProject" style="color: black; text-decoration: none">Share Your Idea!</button></a>
-                    </li>
-                  </ul>
-                </div>
-              </nav>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Filter</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Sort By
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <% industry.forEach(record => { %>
+                    <a class="dropdown-item" id="industry<%=record.id%>"><%=record.industryName%></a>
+                    <% }) %> 
+              </div>
+            </li>
 
-    <div class="container-fluid">
-        <div class="row">
-        <% project.forEach(record => { %>
-            <div class="col-sm-6 col-md-6 col-lg-3 <%=record.industryID%>">
-                <div id="carder" class="card mb-5 mt-2" style="border: none">
-                        <a href="/ideapage/<%=record.id%>" style="color: black; text-decoration: none;">
-                        <!-- <% if (record.id === 1){ %>
-                            <% } else if (record.id === 2){%> 
-                                <div style="background-image: linear-gradient(rgb(245, 12, 12), rgb(156, 46, 38)); height:10vh"></div>
-                            <% } else if (record.id === 3){%> 
-                                <div style="background-image: linear-gradient(rgb(67, 3, 243), rgb(24, 20, 80)); height:10vh"></div>
-                                <%} else{ %>
-                                    <div style="background-image: linear-gradient(rgb(9, 160, 35), rgb(18, 95, 25)); height:10vh"></div>
-                            <% } %> -->
-                        <div class="card-body carder" style="height: 20vh; overflow: auto;">
-                        <h5 class="card-title"><%= record.pName %></h5>
-                        <p class="card-text"><%= record.summary %></p>
-                        </div>
-                        <ul class="list-group list-group-flush">
+          </ul>
+        </div>
+      </nav>
+
+<div class="container-fluid bg-secondary">
+    <div class="row">
+    <% project.forEach(record => { %>
+    <div class="col-sm-6 col-md-6 col-lg-3 test">
+        <div id="carder" class="card mb-5 mt-2 cardLightUp">
+            <a href="/ideapage/<%=record.id%>" style="color: black; text-decoration: none;">
+                <div class="card-body carder" style="height: 20vh;">
+                    <h5 class="card-title"><%= record.pName %></h5>
+                    <p class="card-text"><%= record.summary %></p>
+                </div>
+                    <ul class="list-group list-group-flush">
                         <li class="list-group-item cardneed" style="background-color:rgb(253, 244, 231)">
-                            <ul>What we need:
-                                <li>developer</li>
-                                <li>marketer</li>
-                                <li>acrobat</li>
+                            <!-- <ul>Skills needed: -->
                             </ul>
                         </li>
-                        <!-- <li class="list-group-item">
-                            <img src="/images/washington.jpg" height="75px" width="75px" alt="" style="border-radius: 50%;">
-                            <img src="/images/washington.jpg" height="75px" width="75px" alt="" style="border-radius: 50%;"> -->
-
-                        </li>
-                        </ul>
-                        <!-- <div class="card-body" style="background-image: linear-gradient(rgb(189, 196, 189), rgb(209, 221, 209))"> -->
-                        <div class="card-body" style="background-color: gray; height: 10vh;">
-
-                            <p class="industryNumber<%=record.industryID%>" id="industryNumber<%=record.industryID%>"><%=record.industryID%></p>
-                        </div>
-
+                    </ul>
                 </div>
             </a>
-
-            </div>
-            <% }) %> 
-            
         </div>
+        <% }) %> 
+        
     </div>
+</div>
 
 
-
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    
-    <script>
-    $(document).ready(function() {
-        $(".carder").mouseenter(function(){
-            $(this).css("background-color", "yellow");
-            });
-        $(".carder").mouseleave(function(){
-            $(this).css("background-color", "gray");
-            });
-        $("#createProjectButton").mouseenter(function(){
-            $(this).css("border", "5px solid yellow")
-            });
-        $("#createProjectButton").mouseleave(function(){
-            $(this).css("border", "none")
-            })
-        
-
-        
-        
-        // var elementClicked;
-        // $("#industry1").click(function(){
-        //     elementClicked = true;
-        // });
-        // if (elementClicked == true){
-        //     $(".industryNumber").text('hello')
-        // }
-
-        var test = $("#industryNumber1").text();
-        if (test === "1"){
-            $(".industryNumber1").text('Oil and Gas')
-        }
-        var test3 = $("#industryNumber3").text();
-        if (test3 === "3"){
-            $(".industryNumber3").text('IT')
-        }
-        
-
-        // for (let x=1; x<12; x++){
-        //     if (x === "1"){
-        //         $(".industryNumber1").text('Oil and Gas')
-        //     }
-        // }
-
-    
-    }); //end JQuery document.ready
-
-    </script>
-
-</body>
-</html>
+<% include partials/template/footer.ejs %>
