--- a/views/newProject.ejs
+++ b/views/newProject.ejs
@@ -8,7 +8,7 @@
             </h1>
             <!-- THIS FORM GOES TO USERS AND IT'S GOING TO BE A POST REQUEST 
             -->
-            <form action="/feed" method="POST">
+            <form action="/ideas" method="POST">
                 <div class="form-group">
                     <label for="pName">Project Name</label>
                     <input type="text"
@@ -55,4 +55,4 @@
         </div>
       </div>
 
-<% include partials/template/scripts.ejs %>
+<% include partials/template/footer.ejs %>
